IngressNginx/deploy_404_quiz_vote_hello.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: hello
  name: hello
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello
  template:
    metadata:
      labels:
        app: hello
    spec:
      containers:
      - image: mjbright/banner:hello1
        imagePullPolicy: Always
        name: c1
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: quiz
  name: quiz
spec:
  replicas: 1
  selector:
    matchLabels:
      app: quiz
  template:
    metadata:
      labels:
        app: quiz
    spec:
      containers:
      - image: mjbright/banner:quiz
        imagePullPolicy: Always
        name: c1
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: vote
  name: vote
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vote
  template:
    metadata:
      labels:
        app: vote
    spec:
      containers:
      - image: mjbright/banner:vote
        imagePullPolicy: Always
        name: c1
