IngressNginx/service_quiz_vote_hello.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: hello
  name: hello
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: hello
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: quiz
  name: quiz
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: quiz
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: vote
  name: vote
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: vote
