IngressNginx/deploy_web_rules.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-web1
  annotations:
    # use the shared ingress-nginx
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: web1.foo.org
    http:
      paths:
      - path: /
        backend:
          serviceName: web1
          servicePort: 80
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-web2
  annotations:
    # use the shared ingress-nginx
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: web2.foo.org
    http:
      paths:
      - path: /
        backend:
          serviceName: web2
          servicePort: 80
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-web3
  annotations:
    # use the shared ingress-nginx
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: web3.foo.org
    http:
      paths:
      - path: /
        backend:
          serviceName: web3
          servicePort: 80
