IngressNginx/ingress_HOST_rules_quiz_vote_hello.yaml

#        "ckad-15w", "ckad-15c",  "ingress1-G15","ingress2-G15","ingress3-G15","vote-G15","quiz-G15",



apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-host-ingress1
  annotations:
    # use the shared ingress-nginx
    kubernetes.io/ingress.class: "nginx"
spec:
  defaultBackend:
    service:
      name: notfound404
      port:
        number: 80
  rules:
  - host: ingress1-g15.mjbright.click
    http:
      paths:
      - path: /
        backend:
          service:
            name: hello
            port:
              number: 80
        pathType: ImplementationSpecific
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-host-quiz
  annotations:
    # use the shared ingress-nginx
    kubernetes.io/ingress.class: "nginx"
spec:
  defaultBackend:
    service:
      name: notfound404
      port:
        number: 80
  rules:
  - host: quiz-g15.mjbright.click
    http:
      paths:
      - path: /
        backend:
          service:
            name: quiz
            port:
              number: 80
        pathType: ImplementationSpecific
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-host-vote
  annotations:
    # use the shared ingress-nginx
    kubernetes.io/ingress.class: "nginx"
spec:
  defaultBackend:
    service:
      name: notfound404
      port:
        number: 80
  rules:
  - host: vote-g15.mjbright.click
    http:
      paths:
      - path: /
        backend:
          service:
            name: vote
            port:
              number: 80
        pathType: ImplementationSpecific
